# mage

examples/: CMakeLists.txt
examples/chuck/MageCK/: .MageK.cpp.swo  .test.ck.swm  .test.ck.swn  .test.ck.swo  CMakeLists.txt  MageCK.chug  MageCK.cpp  makefile  makefile.linux  test.ck
libs/hts_engine-1.06/: CMakeLists.txt
libs/sptk/: CMakeLists.txt
src/: CMakeLists.txt
