SET(CHUGIN_NAME MageCK.chug)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__LINUX_ALSA__")

FILE(GLOB SRC ${SRC} MageCK.cpp)



INCLUDE_DIRECTORIES(../chuck/include)
INCLUDE_DIRECTORIES(${MAGE_SRC_PATH})
INCLUDE_DIRECTORIES(${MAGE_HTS_ENGINE_PATH})
INCLUDE_DIRECTORIES(${MAGE_PORTAUDIO_PATH})
INCLUDE_DIRECTORIES(${MAGE_SPTK_PATH})

MESSAGE("* building ${APP_NAME}")

ADD_LIBRARY(${CHUGIN_NAME} SHARED ${SRC})

SET_TARGET_PROPERTIES(${CHUGIN_NAME} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${CHUGIN_NAME} PROPERTIES SUFFIX "")

TARGET_LINK_LIBRARIES(${CHUGIN_NAME} ${MAGE_LIB_NAME})
TARGET_LINK_LIBRARIES(${CHUGIN_NAME} mage-htsengine)
TARGET_LINK_LIBRARIES(${CHUGIN_NAME} mage-sptk)

INSTALL(TARGETS ${CHUGIN_NAME} LIBRARY DESTINATION /usr/lib/chuck)  
